feat(server)  services now connected with maps and organized
